--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2011,12 +2011,19 @@ pre.wp-block-verse {
   opacity: 0.7;
 }
 
-@media (max-width: 768px) {
-  .navbar .navbar-brand {
-    font-size: 14px;
-    padding: 18px 8px;
-  }
+#modest-banner {
+  display: flex;
+  min-height: 300px;
 }
+#modest-banner .rslides {
+  height: 100%;
+}
+
+#top {
+  background-position: center;
+  background-size: cover;
+}
+
 #modest-banner a, #rindu-fill-3 a {
   color: inherit;
   text-decoration: underline;
@@ -2028,10 +2035,10 @@ pre.wp-block-verse {
   line-height: 1.1;
   font-weight: 300;
   font-family: "Helvetica Neue", sans-serif;
+  height: 100%;
 }
 
 #modest-banner .rslides_tabs {
-  padding: 0;
   background: rgba(0, 0, 0, 0.25);
   box-shadow: 0 0 1px rgba(255, 255, 255, 0.3), inset 0 0 5px #000000;
   -moz-box-shadow: 0 0 1px rgba(255, 255, 255, 0.3), inset 0 0 5px #000000;
@@ -2221,31 +2228,6 @@ pre.wp-block-verse {
   margin-top: 0px;
 }
 
-@media screen and (max-width: 768px) {
-  #modest-banner .slide-text-info h1 {
-    font-size: 20px;
-  }
-
-  #modest-banner .slide-text-info p {
-    width: 80%;
-    font-size: 14px;
-  }
-
-  #modest-banner .callbacks_nav {
-    top: 47%;
-  }
-
-  #modest-banner .callbacks .caption {
-    top: 5%;
-    padding: 4px;
-  }
-}
-@media screen and (max-width: 998px) {
-  #modest-banner .callbacks .caption {
-    top: 15%;
-    padding: 4px;
-  }
-}
 #modest-banner .img-overlay-solid {
   position: absolute;
   width: 100%;
@@ -2860,6 +2842,48 @@ h4 > a {
   color: #fff;
 }
 
+@media screen and (max-width: 768px) {
+  #modest-banner .slide-text-info h1 {
+    font-size: 20px;
+  }
+
+  #modest-banner .slide-text-info p {
+    width: 80%;
+    font-size: 14px;
+  }
+
+  #modest-banner .callbacks_nav {
+    top: 47%;
+  }
+
+  #modest-banner .callbacks .caption {
+    top: 5%;
+    padding: 4px;
+  }
+}
+@media screen and (max-width: 998px) {
+  #modest-banner .callbacks .caption {
+    top: 25%;
+    padding: 4px;
+  }
+}
+@media (max-width: 768px) {
+  .navbar .navbar-brand {
+    font-size: 14px;
+    padding: 18px 8px;
+  }
+
+  h2.title {
+    font-size: 28px !important;
+  }
+
+  #treatments table td:first-child {
+    width: 50%;
+  }
+  #treatments table td:last-child {
+    width: 50%;
+  }
+}
 /** temp */
 #content-section-1 img {
   display: none;
